[package]
name = "ternary-checkpoint"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/ternary-checkpoint"
description = "Ternary model checkpointing with 16× compression and Merkle integrity"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
bincode = "1"

[dev-dependencies]
tempfile = "3"
